maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() 
^JediEscaper:2: error: expected start of definition
override def run() 
         ^JediEscaper:3: error: expected class or object definition
{
^JediEscaper:23: error: expected class or object definition
def numerotation(x:Int,y:Int,i:Int)
^JediEscaper:24: error: expected class or object definition
{
^JediEscaper:59: error: expected class or object definition
def suitChemin()
^JediEscaper:60: error: expected class or object definition
{
^